<resources>
    <!--通用-->
    <string name="app_name">车队通</string>
    <string name="copyright">版权所有©山东电子口岸 2018</string>
    <string name="company">山东电子口岸</string>
    <string name="tap_exit">再次点击返回键退出</string>
    <string name="main_info">功能</string>
    <string name="main_community">资讯</string>
    <string name="main_mine">我的</string>
    <string name="loading">加载中&#8230;</string>
    <string name="logining">正在登录&#8230;</string>
    <string name="login_fail">登录失败</string>
    <string name="committing">正在提交&#8230;</string>
    <string name="version">软件版本:%1$s</string>
    <string name="logout">退出登录</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="tips_warmly">温馨提示</string>
    <string name="no_data">暂无数据</string>
    <string name="exit_anymore">确认取消</string>
    <string name="exit_retry">再想想</string>
    <string name="empty">没有数据</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="stop">停用</string>
    <string name="modify">修改</string>
    <string name="start">启用</string>
    <string name="online">当前登录</string>
    <string name="pwd_modify">修改密码</string>
    <string name="update_check">检查版本</string>
    <string name="feedback">意见反馈</string>

    <string name="check">查看</string>
    <string name="reset">重置</string>
    <string name="to">至</string>
    <string name="all">全部</string>
    <string name="find">查询</string>
    <string name="status">状态</string>

    <!--账号相关-->
    <string name="login_hint_acc">输入账号</string>
    <string name="login_hint_nick">输入昵称</string>
    <string name="login_hint_pwd">输入密码</string>
    <string name="login_hint_confirm">再次输入密码</string>
    <string name="login_hint_code">输入验证码</string>
    <string name="account_validate_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功，将回到登录界面</string>
    <string name="operation_failed">操作失败</string>
    <string name="operation_success">操作成功</string>
    <string name="login_register">没有账号？注册一个</string>
    <string name="login_retrieve">忘记密码？</string>
    <string name="account_pwd_reset">重置密码</string>
    <string name="acc_empty">账号不能为空</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="confirm_fail">两次密码不相同</string>
    <string name="code_empty">请输入验证码</string>

    <!--功能-->
    <string name="func_title_yswtd">运输委托单管理</string>
    <string name="func_title_pcd">派车单管理</string>
    <string name="func_title_cdzh">车队账户管理</string>
    <string name="func_title_cl">车辆管理</string>
    <string name="func_title_sj">司机管理</string>
    <string name="func_title_yytx">预约提箱</string>
    <string name="func_title_wlgz">物流状态跟踪</string>

    <string name="order_title">提单号:%s</string>
    <string name="order_buyer">收货人:</string>
    <string name="order_delegate">货代:</string>
    <string name="order_container">箱型箱量:</string>
    <string name="order_address">送货地址:</string>
    <string name="order_status">状态:</string>
    <string name="order_operation">操作:</string>
    <string name="order_deliver_date">送货日期:</string>

    <string name="order_check">查看</string>
    <string name="order_receive">接单</string>
    <string name="order_refuse">拒绝</string>
    <string name="order_cancel">撤销</string>
    <string name="order_dispatch">派车</string>

    <string name="order_check_no">提单号</string>
    <string name="order_check_deliv_place">提箱地</string>
    <string name="order_check_rtn_place">还箱地</string>
    <string name="order_check_delegate">货代名称</string>
    <string name="order_check_buyer">收货人</string>
    <string name="order_check_date">送货日期</string>
    <string name="order_check_status">状态</string>
    <string name="order_check_back">原车返回</string>
    <string name="order_check_picker">选择日期</string>

    <string name="foot_load_more">正在加载&#8230;</string>
    <string name="foot_no_more">已经到底了</string>

    <string name="order_detail_title">运输委托单详情</string>

    <!--派车单管理-->
    <string name="dispatch_order_detail">运输委托单信息</string>
    <string name="dispatch_container_detail">箱信息</string>
    <string name="dispatch_get_detail">提箱派车信息</string>
    <string name="dispatch_return_detail">还箱派车信息</string>
    <string name="dispatch_status">状态</string>
    <string name="dispatch_origin">原车返回</string>
    <string name="dispatch_operation">操作</string>
    <string name="dispatch_operation_get">提箱改派</string>
    <string name="dispatch_operation_return">还箱改派</string>
    <string name="bill_copy_clipboard">提单号已复制</string>
    <!--车队账号管理-->
    <string name="team_name">车队名称</string>
    <string name="team_code">车队代码</string>
    <string name="team_contact">联系人</string>
    <string name="team_label_normal">常用车牌</string>
    <string name="team_account">账号</string>
    <string name="team_nick">账号昵称</string>
    <string name="team_account_name">账号姓名</string>
    <string name="team_status">状态</string>
    <string name="team_card_id">身份证号</string>
    <string name="team_inuse">已启用</string>
    <string name="team_not_inuse">已停用</string>
    <string name="team_password">密码</string>
    <string name="team_phone">手机号</string>
    <string name="team_contact_phone">联系方式</string>
    <!--添加车队账号-->
    <string name="team_add_title">车队账户信息维护</string>
    <string name="team_add_code_empty">车队号不能为空</string>
    <string name="team_add_name_empty">车队名称不能为空</string>
    <string name="team_add_account_empty">车队账号不能为空</string>
    <string name="team_add_pwd_empty">请输入密码</string>

    <!--车辆管理-->
    <string name="truck_add_title">车辆信息维护</string>
    <string name="truck_add_code_empty">车牌号不能为空</string>
    <string name="truck_no">车牌号</string>
    <string name="truck_license">行驶证号</string>
    <string name="truck_type">车型</string>
    <string name="truck_capacity">载重</string>

    <!--司机管理-->
    <string name="driver_account">账号</string>
    <string name="driver_name">姓名</string>
    <string name="driver_card_id">身份证号</string>
    <string name="driver_phone">手机号</string>
    <string name="driver_nick">昵称</string>
    <string name="driver_truck_no">常用车牌号</string>

    <string name="driver_add_title">司机信息维护</string>
    <string name="driver_add_account">账号</string>
    <string name="driver_add_pwd">密码</string>
    <string name="driver_add_name">姓名</string>
    <string name="driver_add_card_id">身份证号</string>
    <string name="driver_add_phone">手机</string>
    <string name="driver_add_nick">昵称</string>
    <string name="driver_add_truck">常用车牌号</string>
    <string name="driver_add_account_empty">账号不能为空</string>
    <string name="driver_add_pwd_empty">密码不能为空</string>
    <string name="driver_add_name_empty">姓名不能为空</string>
    <string name="driver_add_phone_empty">联系方式不能为空</string>

    <!--预约提箱、还箱-->
    <string name="order_status_get">提箱发送状态</string>
    <string name="order_status_rtn">还箱发送状态</string>
    <string name="order_operation_get">预约提箱发送</string>
    <string name="order_operation_rtn">预约还箱发送</string>
    <string name="order_send_success">预约发送成功</string>
    <string name="order_send_fail">预约发送失败</string>

    <!--委托单详情-->
    <string name="order_detail_no">提单号</string>
    <string name="order_detail_delegate">货代</string>
    <string name="order_detail_contact">工厂联系人</string>
    <string name="order_detail_address">工厂地址</string>
    <string name="order_detail_remark">备注</string>
    <string name="order_container_no">集装箱号</string>
    <string name="order_container_type">类型</string>
    <string name="order_container_size">尺寸</string>
    <string name="order_container_date">送货时间</string>
    <string name="order_container_place">还箱地</string>

    <!--提箱派车-->
    <string name="dispatch_title">提箱派车</string>
    <string name="dispatch_title_rtn">还箱派车</string>
    <string name="dispatch_redispatch_title">提箱改派</string>
    <string name="dispatch_return_title">还箱改派</string>
    <string name="dispatch_no">箱号</string>
    <string name="dispatch_type">箱型</string>
    <string name="dispatch_place">提箱地</string>
    <string name="dispatch_address">工厂地址</string>
    <string name="dispatch_place_rtn">还箱地</string>
    <string name="dispatch_appoint_get">约定提箱时间</string>
    <string name="dispatch_time_deliver">送货时间</string>
    <string name="dispatch_appoint_rtn">约定还箱时间</string>
    <string name="dispatch_back_origin">原车返回</string>
    <string name="dispatch_name">提箱号:%s</string>
    <string name="dispatch_list_empty">请选择最少一个派车单</string>
    <string name="dispatch_appoint_get_empty">请选择约定提箱时间，箱号为:%s</string>
    <string name="dispatch_deliver_time_empty">请选择送货时间，箱号为:%s</string>
    <string name="dispatch_appoint_rtn_empty">请选择约定还箱时间，箱号为:%s</string>
    <string name="dispatch_driver">司机</string>
    <string name="dispatch_truck">车牌号</string>
    <string name="dispatch_confirm">派车单确认</string>
    <string name="dispatch_containers">箱号箱量</string>
    <string name="dispatch_driver_empty">请选择一个司机</string>
    <string name="dispatch_truck_empty">请选择一个汽车</string>

    <string name="transport_status_5200">已委托</string>
    <string name="transport_status_5300">已换单</string>
    <string name="transport_status_5400">已押箱</string>
    <string name="transport_status_5500">已派发待接单</string>
    <string name="transport_status_5510">车队拒绝接单</string>
    <string name="transport_status_5520">已接单待派车</string>
    <string name="transport_status_5525">货代取消派发</string>
    <string name="transport_status_5530">车队撤销接单</string>
    <string name="transport_status_5550">派车中</string>
    <string name="transport_status_5600">已派车</string>
    <string name="transport_status_5700">已提箱</string>
    <string name="transport_status_5750">还箱中</string>
    <string name="transport_status_5800">已还箱</string>
    <string name="transport_status_5900">已退押</string>
</resources>
