<?xml version="1.0" encoding="utf-8"?>

<!--提箱派车，选择司机和货车-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_edit"
    android:padding="20dp">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/colorPrimary"
        android:text="@string/dispatch_confirm"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/text_small"
        android:textColor="@color/colorPrimary"
        android:text="@string/dispatch_containers"/>
    <include layout="@layout/view_line_horizontal"/>
    <ListView
        android:id="@+id/lister"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scrollbars="none"
        android:divider="@color/colorPrimary"
        android:dividerHeight="1px"
        android:listSelector="@color/transparent"
        tools:listitem="@layout/view_text_spinner"/>
    <include layout="@layout/view_line_horizontal"/>

    <include layout="@layout/view_line_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_small"
            android:textColor="@color/colorPrimary"
            android:text="@string/dispatch_driver"/>
        <TextView
            android:id="@+id/dispatch_driver"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center_vertical"
            android:textColor="@color/text_main"
            android:textSize="@dimen/text_small"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_small"
            android:textColor="@color/colorPrimary"
            android:text="@string/dispatch_truck"/>
        <TextView
            android:id="@+id/dispatch_truck"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:textColor="@color/text_main"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_small"/>
    </LinearLayout>
    <include layout="@layout/view_line_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_negative"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_margin="15dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_mid"
            android:background="@drawable/bg_edit"/>
        <Button
            android:id="@+id/btn_positive"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_margin="15dp"
            android:text="@string/sure"
            android:textSize="@dimen/text_mid"
            android:background="@drawable/selector_btn_bg"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>