<?xml version="1.0" encoding="utf-8"?>
<!--运输单管理 总列表单项-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@drawable/bg_edit_translucent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:text="@string/order_buyer"
            tools:text="收货人："/>
        <TextView
            android:id="@+id/buyer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/text_main"
            android:textIsSelectable="true"
            tools:text="qweweqeqeqweq"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:text="@string/order_delegate"
            tools:text="货代："/>
        <TextView
            android:id="@+id/delegate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/text_main"
            android:textIsSelectable="true"
            tools:text="qweweqeqeqweq"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:text="@string/order_address"
            tools:text="送货地址："/>
        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/text_main"
            android:textIsSelectable="true"
            tools:text="qweweqeqeqweq"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:text="@string/order_container"
            tools:text="箱型箱量："/>
        <TextView
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/text_main"
            android:textIsSelectable="true"
            tools:text="qweweqeqeqweq"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:text="@string/order_status"
            tools:text="状态："/>
        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/text_main"
            android:textIsSelectable="true"
            tools:text="qweweqeqeqweq"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:text="@string/order_operation"
            tools:text="操作："/>
        <TextView
            android:id="@+id/order_check"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="48dp"
            android:layout_height="28dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/selector_btn_bg"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:textColor="@color/white"
            android:text="@string/order_check"/>
        <TextView
            android:id="@+id/order_receive"
            tools:visibility="visible"
            android:visibility="gone"
            android:layout_width="48dp"
            android:layout_height="28dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/selector_btn_bg"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:textColor="@color/white"
            android:text="@string/order_receive"/>
        <TextView
            android:id="@+id/order_refuse"
            tools:visibility="visible"
            android:visibility="gone"
            android:layout_width="48dp"
            android:layout_height="28dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/selector_btn_bg"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:textColor="@color/white"
            android:text="@string/order_refuse"/>
        <TextView
            android:id="@+id/order_cancel"
            tools:visibility="visible"
            android:visibility="gone"
            android:layout_width="48dp"
            android:layout_height="28dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/selector_btn_bg"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:textColor="@color/white"
            android:text="@string/order_cancel"/>
        <TextView
            android:id="@+id/order_dispatch"
            tools:visibility="visible"
            android:visibility="gone"
            android:layout_width="48dp"
            android:layout_height="28dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/selector_btn_bg"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:textColor="@color/white"
            android:text="@string/order_dispatch"/>
    </LinearLayout>
</LinearLayout>