<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@drawable/icon_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowDx="5"
        android:shadowRadius="5"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:text="@string/company"
        android:textColor="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_edit_translucent">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_account"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/login_account"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="5dp"
            android:textSize="@dimen/text_mid"
            android:background="@color/transparent"
            android:hint="@string/login_hint_acc"
            android:textColorHint="@color/text_hint"
            android:textCursorDrawable="@drawable/cursor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_edit_translucent">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_password"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="5dp"
            android:background="@color/transparent"
            android:textSize="@dimen/text_mid"
            android:hint="@string/login_hint_pwd"
            android:textColorHint="@color/text_hint"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_btn_bg"
        android:text="@string/login"
        android:textSize="@dimen/text_big"
        android:textColor="@color/white"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/login_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/text_hint"
            android:textSize="@dimen/text_small"
            android:text="@string/login_retrieve"/>
        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textColor="@color/text_hint"
            android:textSize="@dimen/text_small"
            android:layout_gravity="end"
            android:text="@string/login_register"/>
    </RelativeLayout>
    <WebView
        android:id="@+id/login_webview"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>