<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v4.view.ViewPager
        android:id="@+id/main_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/main_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_micro"
            android:textColor="@color/colorPrimary"
            android:text="@string/main_info"
            android:drawableTop="@drawable/icon_home_enable"
            android:drawablePadding="5dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/main_community"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_micro"
            android:textColor="@color/text_main"
            android:text="@string/main_community"
            android:drawableTop="@drawable/icon_community_disable"
            android:drawablePadding="5dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/main_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/text_micro"
            android:textColor="@color/text_main"
            android:text="@string/main_mine"
            android:drawableTop="@drawable/icon_mine_disable"
            android:drawablePadding="5dp"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>